--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="profile__data">
           <div class="profile__border">
             <div class="profile__perfil">
-              <img src="Aset/img/20211018_210403.jpg" alt="" />
+              <img src="Aset/img/profil.jpeg" alt="" />
             </div>
           </div>
 
