--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div>
                   <span class="projects__subtitle">Web</span>
                   <h3 class="projects__title">Cafe & Resto</h3>
-                  <a href="" class="projects__button button button__small">
+                  <a href="https://wannproject.github.io/Cafe_Resto/" class="projects__button button button__small">
                     <i class="ri-link"></i>
                   </a>
                 </div>
