--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Aset/css/style.css" />
 
     <!-- pavicon -->
-    <link rel="stylesheet" href="Aset/img/icon.jpg" type="image/x-icon" />
+    <link rel="icon" href="Aset/img/pen.ico" type="image/x-icon" />
 
     <!-- remix icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet" />
@@ -91,12 +91,12 @@
           <!-- PROJECTS -->
           <div class="projects__content grid filters__active" data-content id="projects">
             <article class="projects__card">
-              <img src="Aset/img/projects.jpg" alt="" class="projects__img" />
+              <img src="Aset/img/portfolio.jpg" alt="" class="projects__img" />
               <div class="projects__modal">
                 <div>
                   <span class="projects__subtitle">Web</span>
                   <h3 class="projects__title">Portfolio | landing page</h3>
-                  <a href="https://wannproject.github.io/My-Portfolio-Kurniawan/" class="projects__button button button__small">
+                  <a href="https://wannproject.github.io/LandingPagePortfolio/" class="projects__button button button__small">
                     <i class="ri-link"></i>
                   </a>
                 </div>
@@ -104,7 +104,7 @@
             </article>
 
             <article class="projects__card">
-              <img src="Aset/img/projects.jpg" alt="" class="projects__img" />
+              <img src="Aset/img/cafe.jpg" alt="" class="projects__img" />
               <div class="projects__modal">
                 <div>
                   <span class="projects__subtitle">Web</span>
@@ -117,12 +117,12 @@
             </article>
 
             <article class="projects__card">
-              <img src="Aset/img/projects.jpg" alt="" class="projects__img" />
+              <img src="Aset/img/pedro-costa-aXY5doQNZTc-unsplash.jpg" alt="" class="projects__img" />
               <div class="projects__modal">
                 <div>
                   <span class="projects__subtitle">Web</span>
-                  <h3 class="projects__title">Payment Site</h3>
-                  <a href="" class="projects__button button button__small">
+                  <h3 class="projects__title">Platform Login</h3>
+                  <a href="https://wannproject.github.io/PlatformLogin/" class="projects__button button button__small">
                     <i class="ri-link"></i>
                   </a>
                 </div>
@@ -280,7 +280,7 @@
 
     <!-- FOOTER -->
     <footer class="footer container">
-      <span class="footer__copy"> &#169; <a href="">WannCoder. </a>All rights reserved</span>
+      <span class="footer__copy"> &#169; <a href="https://www.instagram.com/wann_xi/">WannCoder. </a>All rights reserved</span>
     </footer>
 
     <!-- SCROOL REVEAL -->
