--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="icon" href="Aset/img/pen.ico" type="image/x-icon" />
 
     <!-- remix icon -->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- HEADER PROFILE -->
@@ -25,21 +28,35 @@
         <div class="profile__data">
           <div class="profile__border">
             <div class="profile__perfil">
-              <img src="Aset/img/profil.jpeg" alt="" />
+              <img src="Aset/img/profil.png" alt="" />
             </div>
           </div>
 
           <h2 class="profile__name">Kurniawan</h2>
-          <h3 class="profile__profession">Web Developer & Blogger</h3>
+          <h3 class="profile__profession">
+            Full Stack Web Developer & Data Analyst
+          </h3>
 
           <ul class="profile__social">
-            <a href="https://www.instagram.com/wann_xi/" target="_blank" class="profile__social-link">
+            <a
+              href="https://www.instagram.com/wanndev_"
+              target="_blank"
+              class="profile__social-link"
+            >
               <i class="ri-instagram-line"></i>
             </a>
-            <a href="https://www.linkedin.com/login/in" target="_blank" class="profile__social-link">
+            <a
+              href="https://www.linkedin.com/in/wannproject"
+              target="_blank"
+              class="profile__social-link"
+            >
               <i class="ri-linkedin-box-line"></i>
             </a>
-            <a href="https://github.com/WannProject" target="_blank" class="profile__social-link">
+            <a
+              href="https://github.com/WannProject"
+              target="_blank"
+              class="profile__social-link"
+            >
               <i class="ri-github-line"></i>
             </a>
           </ul>
@@ -47,21 +64,21 @@
 
         <div class="profile__info grid">
           <div class="profile__info-group">
-            <h3 class="profile__info-number">7</h3>
+            <h3 class="profile__info-number">4</h3>
             <p class="profile__info-description">
               Yeard of <br />
               work
             </p>
           </div>
           <div class="profile__info-group">
-            <h3 class="profile__info-number">+124</h3>
+            <h3 class="profile__info-number">+12</h3>
             <p class="profile__info-description">
               Completed <br />
               projects
             </p>
           </div>
           <div class="profile__info-group">
-            <h3 class="profile__info-number">96</h3>
+            <h3 class="profile__info-number">12</h3>
             <p class="profile__info-description">
               Satisfied <br />
               customer
@@ -69,12 +86,24 @@
           </div>
         </div>
         <div class="profile__buttons">
-          <a download="" href="Aset/pdf/cv.pdf" class="button"> Download CV <i class="ri-download-line"></i> </a>
+          <a download="" href="Aset/pdf/cv.pdf" class="button">
+            Download CV <i class="ri-download-line"></i>
+          </a>
 
           <div class="profile__buttons-small">
             <!-- nomor whatsap -->
-            <a href="https://api.whatsapp.com/send/?phone=6285825091329&text=Hello, more information!" target="_blank" class="button button__small button__gray"><i class="ri-whatsapp-line"></i></a>
-            <a href="https://www.messenger.com/t/100024030669446" target="_blank" class="button button__small button__gray"><i class="ri-messenger-line"></i></a>
+            <a
+              href="https://api.whatsapp.com/send/?phone=6285825091329&text=Hello, more information!"
+              target="_blank"
+              class="button button__small button__gray"
+              ><i class="ri-whatsapp-line"></i
+            ></a>
+            <a
+              href="https://www.messenger.com/t/100024030669446"
+              target="_blank"
+              class="button button__small button__gray"
+              ><i class="ri-messenger-line"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -84,19 +113,28 @@
     <main class="main">
       <section class="filters container">
         <ul class="filters__content">
-          <button class="filters__button" data-target="#projects">Projects</button>
+          <button class="filters__button" data-target="#projects">
+            Projects
+          </button>
           <button class="filters__button" data-target="#skills">Skills</button>
         </ul>
         <div class="filters__section">
           <!-- PROJECTS -->
-          <div class="projects__content grid filters__active" data-content id="projects">
+          <div
+            class="projects__content grid filters__active"
+            data-content
+            id="projects"
+          >
             <article class="projects__card">
               <img src="Aset/img/portfolio.jpg" alt="" class="projects__img" />
               <div class="projects__modal">
                 <div>
                   <span class="projects__subtitle">Web</span>
                   <h3 class="projects__title">Portfolio | landing page</h3>
-                  <a href="https://wannproject.github.io/LandingPagePortfolio/" class="projects__button button button__small">
+                  <a
+                    href="https://wannproject.github.io/LandingPagePortfolio/"
+                    class="projects__button button button__small"
+                  >
                     <i class="ri-link"></i>
                   </a>
                 </div>
@@ -109,7 +147,10 @@
                 <div>
                   <span class="projects__subtitle">Web</span>
                   <h3 class="projects__title">Cafe & Resto</h3>
-                  <a href="https://wannproject.github.io/Cafe_Resto/" class="projects__button button button__small">
+                  <a
+                    href="https://wannproject.github.io/Cafe_Resto/"
+                    class="projects__button button button__small"
+                  >
                     <i class="ri-link"></i>
                   </a>
                 </div>
@@ -117,12 +158,19 @@
             </article>
 
             <article class="projects__card">
-              <img src="Aset/img/pedro-costa-aXY5doQNZTc-unsplash.jpg" alt="" class="projects__img" />
+              <img
+                src="Aset/img/pedro-costa-aXY5doQNZTc-unsplash.jpg"
+                alt=""
+                class="projects__img"
+              />
               <div class="projects__modal">
                 <div>
                   <span class="projects__subtitle">Web</span>
                   <h3 class="projects__title">Platform Login</h3>
-                  <a href="https://wannproject.github.io/PlatformLogin/" class="projects__button button button__small">
+                  <a
+                    href="https://wannproject.github.io/PlatformLogin/"
+                    class="projects__button button button__small"
+                  >
                     <i class="ri-link"></i>
                   </a>
                 </div>
@@ -280,7 +328,10 @@
 
     <!-- FOOTER -->
     <footer class="footer container">
-      <span class="footer__copy"> &#169; <a href="https://www.instagram.com/wann_xi/">WannCoder. </a>All rights reserved</span>
+      <span class="footer__copy">
+        &#169; <a href="https://www.instagram.com/wanndev_/">WannDev. </a>All
+        rights reserved</span
+      >
     </footer>
 
     <!-- SCROOL REVEAL -->
